feat: Add RwandaMap component for visualizing agricultural data with heatmap functionality
feat: Implement StatsOverview component to display key statistics and disease breakdown

chore: Configure ESLint for TypeScript and React with recommended rules

test: Create a script to verify admin setup and database accessibility

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -38,6 +38,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "adminEmail": "d.nkurunziz@alustudent.com"
     }
   }
 }
