--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,14 +1,30 @@
+# Core Flask and API dependencies
 Flask==2.3.3
 Flask-CORS==4.0.0
-Flask-RESTX==1.3.0
+Flask-RESTx==1.3.0
+Werkzeug==2.3.7
+
+# Machine Learning and AI
 tensorflow==2.13.0
 numpy==1.24.3
-opencv-python==4.8.1.78
-Pillow==10.0.1
-Werkzeug==2.3.7
 scikit-learn==1.3.0
-pandas==2.0.3
-matplotlib==3.7.2
-gunicorn==21.2.0
+
+# Image processing
+Pillow==10.0.1
+opencv-python==4.8.1.78
+
+# Database and storage (optional - for location API)
+supabase==1.0.4
+psycopg2-binary==2.9.7
+
+# Environment and configuration
+python-dotenv==1.0.0
+
+# Development and testing
 requests==2.31.0
-supabase==1.2.0 
+pytest==7.4.2
+pytest-flask==1.2.0
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
